@@ -1,5 +1,7 @@
 ---------------------------------------------------------------------------
 Version 3.19.7 (rgerhards), 2008-06-??
+- added new property replacer option "time-subseconds" that enables
+  to query just the subsecond part of a high-precision timestamp
 ---------------------------------------------------------------------------
 Version 3.19.6 (rgerhards), 2008-06-06
 - enhanced property replacer to support multiple regex matches
